Another comment added to index

--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
 If our project had an landing page, this would be it. Hypothetically.
 
 // Because I felt the index needed a comment. Or two.
+
+// Or three.
