--- a/index.html
+++ b/index.html
@@ -1,5 +1,22 @@
-If our project had an landing page, this would be it. Hypothetically.
+<!-- If our project had an landing page, this would be it. Hypothetically.
 
 // Because I felt the index needed a comment. Or two.
 
-// Or three.
+// Or three. -->
+<!DOCTYPE <!DOCTYPE html>
+<html>
+<head>
+    <title>Solid Maybe Weather</title>
+</head>
+<body>
+    <div class="container">
+        <p id="city"></p>
+        <p id="weather"></p>
+        <p id="currentTemp"></p>
+        <p id ="tempHi"></p>
+        <p id="tempLo"></p>
+
+    </div>
+    <script src="main.js"></script>
+</body>
+</html>
